[gd_scene load_steps=6 format=3 uid="uid://c8qp17lv2wuhd"]

[ext_resource type="Script" path="res://MainView.gd" id="1_8wf15"]
[ext_resource type="PackedScene" uid="uid://p5v2nhv7wt4a" path="res://LayerCube.tscn" id="2_mdwvq"]

[sub_resource type="ViewportTexture" id="ViewportTexture_e7vv5"]
viewport_path = NodePath("LayerCube/SubViewport")

[sub_resource type="Mesh" id="Mesh_4px7r"]
resource_local_to_scene = false
resource_name = ""
lightmap_size_hint = Vector2i(0, 0)

[sub_resource type="ImageTexture" id="ImageTexture_cjkby"]

[node name="MainView" type="Node2D"]
script = ExtResource("1_8wf15")

[node name="LayerCubeTextureRect" type="TextureRect" parent="."]
offset_left = 4.0
offset_top = 155.0
offset_right = 1222.0
offset_bottom = 1243.0
texture = SubResource("ViewportTexture_e7vv5")

[node name="LayerCube" parent="." instance=ExtResource("2_mdwvq")]
visible = false

[node name="CSGMesh3D" parent="LayerCube/SubViewport" index="1"]
mesh = SubResource("Mesh_4px7r")

[node name="LayerTextureRect" type="TextureRect" parent="."]
offset_left = 1214.0
offset_top = 158.0
offset_right = 2301.0
offset_bottom = 1245.0
expand_mode = 1

[node name="LayerLabel" type="RichTextLabel" parent="."]
offset_left = 1242.0
offset_top = 27.0
offset_right = 2295.0
offset_bottom = 158.0
theme_override_font_sizes/normal_font_size = 48

[node name="LayerTextureRect_" type="Sprite2D" parent="."]
visible = false
texture = SubResource("ImageTexture_cjkby")

[node name="LeftInstructionLabel" type="Label" parent="."]
offset_top = 2400.0
offset_right = 1078.0
offset_bottom = 2511.0
theme_override_font_sizes/font_size = 32
text = "Left Click: Rotate
Scroll Wheel: Zoom"

[node name="RightInstructionLabel" type="Label" parent="."]
offset_left = 2627.0
offset_top = 2400.0
offset_right = 3705.0
offset_bottom = 2541.0
theme_override_font_sizes/font_size = 32
text = "Scroll Wheel: Zoom
Up/Down: Change Layer
Page Up/Page Down: Change Layer x 10"

[editable path="LayerCube"]
